Fix remove-item alignment

--- a/sass/modules/village/forms/_addedit-village.scss
+++ b/sass/modules/village/forms/_addedit-village.scss
@@ -101,4 +101,7 @@ $preview-columns: $center - $phone-columns;
   }
 }
 
-.remove-item { float: left; }
+.remove-item {
+  @include padding-leader(.25);
+  float: left;
+}
